Implemented appearance of items

--- a/src/app/cart/cart-list/cart-item/cart-item.component.html
+++ b/src/app/cart/cart-list/cart-item/cart-item.component.html
@@ -1,3 +1,10 @@
-<p>
-  cart-item works!
-</p>
+<div class="bought-products item">
+  <div class="bought-products item-body">
+    <ul>
+      <li>Name: {{item.name}}</li>
+      <li>Model: {{item.model}}</li>
+      <li>Cost (x1): {{item.cost}}</li>
+      <li>Count: {{item.count}}</li>
+    </ul>
+  </div>
+</div>
