--- a/src/app/products/product-list/product-list.component.html
+++ b/src/app/products/product-list/product-list.component.html
@@ -1,8 +1,5 @@
 <div class="basket">
-  <app-basket
-  [bookedProducts]="toBasket"
-  >
-  </app-basket>
+  <app-basket [bookedProducts]="toBasket"></app-basket>
 </div>
 <div>
   <app-product
