--- a/src/app/cart/cart-list/cart-list.component.html
+++ b/src/app/cart/cart-list/cart-list.component.html
@@ -1,3 +1,13 @@
-<p>
-  cart-list works!
-</p>
+
+
+<!--How to use it together?-->
+
+<div>
+  <app-cart-item>
+    <app-basket
+      (boughtProducts)="onBought($event)"
+      *ngFor="let item of myBoughtProducts"
+      [item]="item"
+    ></app-basket>
+  </app-cart-item>
+</div>
