--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,4 +5,7 @@
 </div>
 <app-product-list></app-product-list>
 
+<div class="cart-list"></div>
+
+<app-cart-list></app-cart-list>
 <router-outlet></router-outlet>
