Started work on the new basket

--- a/src/app/cart/cart-list/cart-item/cart-item.component.html
+++ b/src/app/cart/cart-list/cart-item/cart-item.component.html
@@ -4,7 +4,7 @@
       <li>Name: {{item.name}}</li>
       <li>Model: {{item.model}}</li>
       <li>Cost (x1): {{item.cost}}</li>
-      <li>Count: {{item.count}}</li>
+      <li>Total cost: {{item.cost}}</li>
     </ul>
   </div>
 </div>
