--- a/src/app/cart/cart-list/cart-item/cart-item.component.html
+++ b/src/app/cart/cart-list/cart-item/cart-item.component.html
@@ -6,5 +6,6 @@
       <li>Cost (x1): {{item.cost}}</li>
       <li>Total cost: {{item.cost}}</li>
     </ul>
+    <button type="button" (click)="removeItem()">Remove</button>
   </div>
 </div>
