--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,54 @@
-<div style="text-align:center">
-  <h1>
-    Welcome to {{ title }}!
-  </h1>
+<div>
+  <div>
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button
+            type="button"
+            class="navbar-toggle collapsed"
+            data-toggle="collapse"
+            data-target="#bs-example-navbar-collapse-1"
+            aria-expanded="false">
+
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" routerLink="/product-list">All products</a>
+        </div>
+
+        <div>
+          <ul class="nav navbar-nav">
+            <li routerLinkActive="active">
+              <a routerLink="/basket">Basket</a>
+            </li>
+            <li routerLinkActive="active">
+              <a routerLink="/admin">Admin</a>
+            </li>
+            <li routerLinkActive="active">
+              <a routerLink="/login">Login</a>
+            </li>
+            <li>
+              <a routerLink="/basket">
+                <app-basket></app-basket>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <!--<div class="basket">-->
+      <!--<app-basket></app-basket>-->
+    <!--</div>-->
+
+    <div class="container">
+      <router-outlet
+        (activate)='onActivate($event)'
+        (deactivate)='onDeactivate($event)'>
+      </router-outlet>
+      <!-- Routed views go here -->
+    </div>
+  </div>
 </div>
-<app-product-list></app-product-list>
-
-<div class="cart-list"></div>
-
-<app-cart-list></app-cart-list>
-<router-outlet></router-outlet>
