--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,9 +39,9 @@
       </div>
     </nav>
 
-    <!--<div class="basket">-->
-      <!--<app-basket></app-basket>-->
-    <!--</div>-->
+    <div class="basket">
+      <app-basket></app-basket>
+    </div>
 
     <div class="container">
       <router-outlet
