--- a/src/app/products/product-list/product/product.component.html
+++ b/src/app/products/product-list/product/product.component.html
@@ -1,6 +1,10 @@
 <div class="panel panel-default">
   <label>
-    <input class="checkbox" type="checkbox" [checked]="isSelected" (click)="onSelected()">
+    <input
+      class="checkbox"
+      type="checkbox"
+      [checked]="isSelected"
+      (click)="onSelected()">
   </label>
   <div class="panel-body">
     <ul>
