--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,2 +1,8 @@
 <h3>Admin</h3>
+<button
+  *ngIf="isAdminComponent"
+  type="button"
+  class="btn btn-default"
+  (click)="onProducts()">Products
+</button>
 <router-outlet></router-outlet>
