--- a/src/app/layout/components/login/login.component.html
+++ b/src/app/layout/components/login/login.component.html
@@ -1,5 +1,27 @@
 <h2>LOGIN</h2>
 <p>State: {{message}}</p>
+
+<div *ngIf="!authService.isLoggedIn" class="panel-body">
+  <div class="form-group">
+    <label for="email">Email</label>
+    <input type="text"
+           class="form-control"
+           id="email" name="email"
+           placeholder="Email"
+           required
+           [(ngModel)]="email">
+  </div>
+  <div class="form-group">
+    <label for="password">Password</label>
+    <input type="text"
+           class="form-control"
+           id="password" name="password"
+           placeholder="Password"
+           required
+           [(ngModel)]="password">
+  </div>
+</div>
+
 <p>
   <button class="btn btn-primary" (click)="onLogin()"
           *ngIf="!authService.isLoggedIn">Login
